Fix CORS and Orders pagination mismatch